<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">失物招领系统</string>

    <string name="login_title">登录界面</string>
    <string name="login_account">账号：</string>
    <string name="login_password">密码：</string>
    <string name="login_account_hint">请输入您的账号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_show_password">显示密码</string>
    <string name="login_remember_account">记住账号</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>

    <string name="register_title">注册界面</string>
    <string name="register_account_hint">请输入账号(20位以内，不包含特殊字符)</string>
    <string name="register_password_hint">请输入密码(20位以内，不包含特殊字符)</string>
    <string name="register_password_repetition_hint">请重复密码</string>
    <string name="register_phone_number_hint">请输入手机号</string>

    <string name="home_title">欢迎</string>

    <string name="valid_character">0123456789aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ</string>

    <string name="main_title_message">消息</string>
    <string name="main_title_publish">发布</string>
    <string name="main_title_information">个人信息</string>

    <string name="message_refresh_hint">下拉刷新</string>

    <string name="publish_event_type">选择事件类型</string>
    <string name="publish_object_name">物品名称：</string>
    <string name="publish_location">丢失地点：</string>
    <string name="publish_time">丢失时间：</string>
    <string name="publish_description">详细描述：</string>
    <string name="publish_image">物品图片</string>
    <string name="publish_image_hint">无</string>
    <string name="publish_publish">发布</string>

    <string name="information_information">个人信息</string>
    <string name="information_modify">修改个人信息</string>
    <string name="information_security">安全</string>
    <string name="information_publish">发布记录</string>
    <string name="information_event">申请记录</string>
    <string name="information_report">举报记录</string>
    <string name="unknown">Unknown</string>

    <string name="object_title">物品信息</string>
    <string name="object_apply">申请</string>
    <string name="object_report">举报</string>

    <string name="user_publish_title">发布历史</string>
    <string name="user_object_commit_end">结束事件</string>

    <string name="information_information_title">个人信息</string>
    <string name="information_information_nickname_hint">用户昵称</string>
    <string name="information_information_id_hint">用户id</string>
    <string name="information_information_phone_number_hint">手机号码</string>
    <string name="information_information_contact_information_hint">联系方式</string>
    <string name="information_information_credit_score_hint">信誉积分</string>

    <string name="information_modify_title">修改个人信息</string>
    <string name="information_modify_nickname_hint">修改你的昵称(空则代表不修改)</string>
    <string name="information_modify_contact_information_hint">修改你的联系方式(空则代表不修改)</string>
    <string name="information_modify_btn_commit">提交</string>

    <string name="information_security_choose_title">安全</string>
    <string name="information_security_choose_set_question">设置密保问题</string>
    <string name="information_security_choose_password">通过密码修改密码</string>
    <string name="information_security_choose_question">通过密保修改密码</string>

    <string name="information_security_set_question_title">设置密保问题</string>
    <string name="information_security_set_question_question_hint">请输入密保问题</string>
    <string name="information_security_set_question_answer_hint">请输入密保答案</string>
    <string name="information_security_set_question_commit">提交</string>

    <string name="information_security_password_title">修改密码</string>
    <string name="information_security_password_old_hint">请输入旧密码</string>
    <string name="information_security_password_commit">提交</string>

    <string name="information_security_question_title">修改密码</string>
    <string name="information_security_question_hint">密保问题：</string>
    <string name="information_security_question_input_hint">请输入密保答案</string>
    <string name="information_security_question_commit">提交</string>

    <string name="user_apply_info_title">申请记录</string>
</resources>