<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_information_security_question_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title"
        android:gravity="center"
        android:background="@color/style"
        android:text="@string/information_security_question_title"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <TextView
            android:id="@+id/tv_information_security_question_hint"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:text="@string/information_security_question_hint" />

        <TextView
            android:id="@+id/tv_information_security_question"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/tv_information_security_question_hint" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <ImageView
            android:layout_width="@dimen/imageView"
            android:layout_height="@dimen/imageView"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:src="@drawable/ic_password"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_account"/>

        <EditText
            android:id="@+id/et_information_security_question_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/line"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@null"
            android:hint="@string/information_security_question_input_hint"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="20"
            android:digits="@string/valid_character"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@color/style" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <ImageView
            android:layout_width="@dimen/imageView"
            android:layout_height="@dimen/imageView"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:src="@drawable/ic_password"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_password"/>

        <EditText
            android:id="@+id/et_information_security_question_new_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/line"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@null"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:digits="@string/valid_character"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_information_security_password"
            android:layout_width="@dimen/imageView"
            android:layout_height="@dimen/imageView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_password_display"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_show_password"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@color/style" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <ImageView
            android:layout_width="@dimen/imageView"
            android:layout_height="@dimen/imageView"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:src="@drawable/ic_password"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_account"/>

        <EditText
            android:id="@+id/et_information_security_question_new_repeat_hint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/line"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@null"
            android:hint="@string/register_password_repetition_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:digits="@string/valid_character"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_deep"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/editText_start"
            android:layout_marginLeft="@dimen/editText_start"
            android:background="@color/style" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_information_security_question_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/button"
            android:paddingBottom="@dimen/margin_small"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/information_security_question_commit"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>